--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,9 +16,13 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    messenger:
+        reset_on_message: true
 
 when@test:
     framework:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+
