--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,6 +3,11 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
+    handle_all_throwables: true
+    
+    annotations:
+        enabled: false
+
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
@@ -16,8 +21,8 @@ framework:
     #fragments: true
     php_errors:
         log: true
-    messenger:
-        reset_on_message: true
+    # messenger:
+    #     reset_on_message: true
 
 when@test:
     framework:
