--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-        #server_version: '16'
+        server_version: '8.0.31'
         use_savepoints: true
 
     orm:
