--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,26 +1,36 @@
 security:
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
     providers:
         app_user_provider:
-            memory:
-                users:
-                    ina: { password: '$2y$13$7JS0ehfU8vZhB3Q8o1sPGuoQxkiPGXRGgrAizmNfI5Sgy.Dqt9xoW', roles: ['ROLE_ADMIN'] }
+            entity:
+                class: App\Entity\User
+                property: name
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             lazy: true
             provider: app_user_provider
             form_login:
                 login_path: admin_login
                 check_path: admin_login
-            
+                username_parameter: _username
+                password_parameter: _password
+            logout:
+                path: /logout
+                target: /
+
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
+
     access_control:
         - { path: ^/admin, roles: ROLE_USER }
+
 
 when@test:
     security:
