--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,7 @@ security:
             logout:
                 path: /logout
                 target: /
+            user_checker: App\Security\UserChecker
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
