--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 		"doctrine/doctrine-bundle": "^2.15",
 		"doctrine/doctrine-migrations-bundle": "^3.3",
 		"doctrine/orm": "3.3",
+		"knplabs/knp-paginator-bundle": "^6.9",
 		"phpdocumentor/reflection-docblock": "^5.4",
 		"phpstan/phpdoc-parser": "^1.29",
 		"symfony/asset": "7.2.*",
