Ajout du workflow GitHub Actions (tests + PHPStan)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI Symfony
 
 on:
   push:
-    branches: [ main, ci/github-actions]
+    branches: [ main, ci/github-actions ]
   pull_request:
     branches: [ main ]
 
@@ -38,8 +38,8 @@ jobs:
           extensions: pdo_mysql
           coverage: none
 
-      - name: Install Composer dependencies
-        run: composer install --prefer-dist --no-progress
+      - name: Install Composer dependencies (no-scripts)
+        run: composer install --prefer-dist --no-progress --no-scripts
 
       - name: Create database
         run: php bin/console doctrine:database:create --env=test
@@ -50,17 +50,16 @@ jobs:
       - name: Load fixtures
         run: php bin/console doctrine:fixtures:load --no-interaction --env=test
 
-    #   # (Optionnel) Compile SASS si ton projet le nécessite
-    #   - name: Compile SASS
-    #     run: php bin/console sass:build
-    #     continue-on-error: true
-
       - name: Run tests
         run: php bin/phpunit
 
-      # ➕ Diagnostic en cas d'erreur de test
       - name: Check Symfony logs (dev.log)
         run: cat var/log/dev.log || echo "No dev.log found"
+
+      - name: Vérifie que PHPStan est installé
+        run: |
+          ls -la vendor/bin
+          test -f vendor/bin/phpstan && echo "✅ PHPStan installé." || exit 1
 
       - name: Run PHPStan (analyse statique)
         run: vendor/bin/phpstan analyse --memory-limit=1G
