--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,8 @@
 		],
 		"post-update-cmd": [
 			"@auto-scripts"
-		]
+		],
+		"phpstan": "vendor/phpstan/phpstan/phpstan"
 	},
 	"conflict": {
 		"symfony/symfony": "*"
@@ -96,6 +97,7 @@
 		"dama/doctrine-test-bundle": "^8.2",
 		"doctrine/data-fixtures": "2.0",
 		"doctrine/doctrine-fixtures-bundle": "4.0",
+		"phpstan/phpstan": "^2.1",
 		"phpunit/phpunit": "^9.5",
 		"symfony/browser-kit": "7.2.*",
 		"symfony/css-selector": "7.2.*",
