Test: Ajutement test PHPUNIT après mise à jour fonctionnalité medias pour invité

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,7 +23,7 @@ security:
                 password_parameter: _password
             logout:
                 path: /logout
-                target: /
+                target: /login
             user_checker: App\Security\UserChecker
 
     role_hierarchy:
