Test: Refactorisation des tests_Ajouts tests pour meilleure couverture

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,10 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
+        public: true
+    test.Symfony\Component\DependencyInjection\ParameterBag\ParameterBagInterface:
+        public: true
+        synthetic: true
     App\DataFixtures\:
         resource: '../src/DataFixtures'
         tags: ['doctrine.fixture.orm']
