--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,11 @@
-# define your env variables for the test env here
-KERNEL_CLASS='App\Kernel'
-APP_SECRET='$ecretf0rt3st'
-SYMFONY_DEPRECATIONS_HELPER=999999
-PANTHER_APP_ENV=panther
-PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+# # define your env variables for the test env here
+# KERNEL_CLASS='App\Kernel'
+# APP_SECRET='$ecretf0rt3st'
+# SYMFONY_DEPRECATIONS_HELPER=999999
+# PANTHER_APP_ENV=panther
+# PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 
-DATABASE_URL="mysql://root:@127.0.0.1:3306/ina_zaoui?serverVersion=10.4.32-mariadb&charset=utf8mb4"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/ina_zaoui_test?serverVersion=10.4.32-mariadb&charset=utf8mb4"
 
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
