Feat : Migrations finale de symfony de 7.2 à 7.3

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -24,6 +24,9 @@ framework:
     # messenger:
     #     reset_on_message: true
 
+    profiler:
+        collect_serializer_data: true
+
 when@test:
     framework:
         test: true
