--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@
 # #
 # # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-# DATABASE_URL="mysql://utilisateur:mot_de_passe@localhost/nom_de_la_base?serverVersion=version_du_serveur-mariadb&charset=utf8mb4"
+# DATABASE_URL="mysql://utilisateur:mot_de_passe@127.0.0.1/nom_de_la_base?serverVersion=8.0&charset=utf8mb4"
 
 # # DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/ina_zaoui?serverVersion=16&charset=utf8"
 # ###< doctrine/doctrine-bundle ###
