--- a/.env.test
+++ b/.env.test
@@ -6,6 +6,6 @@
 # PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 
-# DATABASE_URL="mysql://root:@127.0.0.1:3306/ina_zaoui_test?serverVersion=10.4.32-mariadb&charset=utf8mb4"
+# DATABASE_URL="mysql://utilisateur:mot_de_passe@127.0.0.1/nom_de_la_base?serverVersion=8.0&charset=utf8mb4"
 
 # MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
